test/tests/operators/to_splunk_validation/s2s_tls.txt
error: `tls` is not yet supported with `mode="s2s"`
 --> tests/operators/to_splunk_validation/s2s_tls.tql:8:15
  |
8 |           tls=true
  |               ^^^^ 
  |
